# engineer-project-hub2

./: README.md  docker-compose.yml  project-structure.yaml  specification.md
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: database.py
backend/app/api/: api.py  engineers.py
backend/app/api/endpoints/: projects.py
backend/app/crud/: crud_engineer.py  project.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: project.py  schemas.py
backend/app/scripts/: check_data.py  create_tables.py  seed_data.py
docs/guides/: development.md  operation.md  setup.md
docs/handover/: backend-implementation.md
docs/technical/: api.md  database.md  system.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
